--- a/config-server-git.yml
+++ b/config-server-git.yml
@@ -5,12 +5,12 @@
 test: ccc
 
 # routes to serviceId
-zuul：
-	routes：
-		api-a：
-			path：/api-a/**
-			serviceId：service-A
+zuul:
+	routes:
+		api-a:
+			path:/api-a/**
+			serviceId:service-A
 
-		api-b：
-      			path：/api-b/**
-			serviceId：service-B
+		api-b:
+      			path:/api-b/**
+			serviceId:service-B
