--- a/config-server-git-dev.yml
+++ b/config-server-git-dev.yml
@@ -2,15 +2,15 @@ info:
   profile: default
   from: git
   
-test: ccc
+test: ggg
 
 # routes to serviceId
 zuul:
-	routes:
-		api-a:
-			path:/api-a/**
-			serviceId:service-A
+  routes:
+     api-a:
+        path:/api-a/**
+	serviceId:service-A
 
-		api-b:
-      			path:/api-b/**
-			serviceId:service-B
+     api-b:
+      	path:/api-b/**
+	serviceId:service-B
