--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -1,6 +1,6 @@
 # routes to serviceId
-zuul.routes.api-a.path=/api-a/**
-zuul.routes.api-a.serviceId=service-A
+zuul.routes.service-A.path=/service-A/**
+zuul.routes.service-A.serviceId=service-A
 
-zuul.routes.api-b.path=/api-b/**
-zuul.routes.api-b.serviceId=service-B
+zuul.routes.service-B.path=/service-B/**
+zuul.routes.service-B.serviceId=service-B
