--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -1,5 +1,5 @@
 # routes to serviceId
-zuul.routes.service-A.path=/api-a/**
+zuul.routes.service-A.path=/service-A/**
 zuul.routes.service-A.serviceId=service-A
 
 zuul.routes.service-B.path=/service-B/**
