--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -5,40 +5,26 @@ zuul.routes.api-a.serviceId=service-A
 zuul.routes.service-B.path=/service-B/**
 zuul.routes.service-B.serviceId=service-B
 
-#spring.cloud.consul.discovery.scheme=https
-spring.cloud.consul.discovery.registerHealthCheck=false
+spring.application.name=api-gateway
+server.port=5556
 
-#server.ssl.enabled=true
-#server.ssl.key-alias=smartms
-#server.ssl.key-store=classpath:fcae.jks
-#server.ssl.key-store-password=secret
-#server.ssl.key-password=password
+spring.cloud.config.name=api-gateway
+spring.cloud.config.url=http://localhost:1201/
+spring.cloud.config.profile=dev
+cloud.config.label=master
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=config-server-git
+management.security.enabled=false
+spring.cloud.config.failFast=true
 
+#解决超时问题
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=500000
 
-zuul.stripPrefix=false
-zuul.retryable=true
-zuul.addHostHeader=false
-zuul.sensitiveHeaders=false
-zuul.ignoredServices=config-server-git,eureka,gateway
+# routes to serviceId
+#zuul.routes.api-a.path=/api-a/**
+#zuul.routes.api-a.serviceId=service-A
+#
+#zuul.routes.api-b.path=/api-b/**
+#zuul.routes.api-b.serviceId=service-B
 
-zuul.maxAutoRetries=1
-zuul.maxAutoRetriesNextServer=1
-
-ribbon.IsSecure=false
-
-#ribbon.connectTimeout=20000
-#ribbon.readTimeout=20000
-
-#断路器的超时时间,断路器的超时时间需要大于ribbon的超时时间，不然不会触发重试。
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
-hystrix.command.default.execution.isolation.strategy=SEMAPHORE
-#ribbon请求连接的超时时间
-ribbon.ConnectTimeout=3000
-#请求处理的超时时间
-ribbon.ReadTimeout=3000
-#对所有操作请求都进行重试
-ribbon.OkToRetryOnAllOperations=true
-#对当前实例的重试次数,Max number of retries on the same server (excluding the first try)
-ribbon.MaxAutoRetries=1
-#对下个实例的重试次数
-ribbon.MaxAutoRetriesNextServer=1
+eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
