--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -28,3 +28,5 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=500000
 #zuul.routes.api-b.serviceId=service-B
 
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
+
+service-A.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RandomRule
