--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -29,4 +29,4 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=500000
 
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
-#service-A.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RandomRule
+service-A.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RandomRule
